[package]
name = "calc_near_x"
version = "0.1.0"
edition = "2021"
description = "Simple lib for learn proposal"
authors = ["Eduardo Sabino <eduardosabino@ymail.com>"]
repository = "https://github.com/eduardo-lopes-95/calc_near_x.git"
readme = "README.md"
license = "MIT"
keywords = [
    "learn"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
